		Improved support for Panasonic TX-L32V10E TVs
	Languages:
		Updated Spanish translation (thanks, AlfredoRamos!)
	External Components:
		Updated Apache commons-lang to 3.3.2, which:
			Fixes bugs
		Updated Logback to 1.1.2, which:
			Fixes bugs
		Updated Maven Git Commit ID Plugin to 2.1.9
		Updated Netty to 3.9.1, which:
			Fixes bugs
		Updated slf4j to 1.7.7

3.6.3 - 2014-06-??

	General:
		Added documentation for more renderer options to PS3.conf (CustomFFmpegOptions and OverrideVideoFilter)
	Renderers:
		Added support for nPlayer, skifta and TwonkyBeam on portable Apple devices (thanks, MattDetroit!)
		Added support for LG LM620 TVs (thanks, michal-sapsa!)
		Improved support for OPPO devices
		Improved support for Panasonic TX-L32V10E TVs
	External Components:
		Updated Apache commons-lang to 3.3.2, which:
			Fixes bugs
		Updated Logback to 1.1.2, which:
			Fixes bugs
		Updated Maven FindBugs Plugin to 2.5.4
		Updated Maven Git Commit ID Plugin to 2.1.9
		Updated Netty to 3.9.1, which:
			Fixes bugs
		Updated slf4j to 1.7.7

3.6.2 - 2014-05-26

	General:
		Tweaked the default Wi-Fi settings for smoother playback on slower networks
		Fixed automatic updating on Windows
		Fixed a memory leak
		Fixed several bugs on OS X
		Optimized code
		Improved logging
	Renderers:
		Improved support for Apple mobile devices (iPad, iPhone, iPod)
		Improved support for DirecTV HR
		Improved support for LG LA644V Smart TV
		Improved support for Nokia N900
		Improved support for Pioneer Kuro
		Improved support for Samsung mobile devices
		Improved support for Sony Bravia 4500
		Improved support for Sony Bravia EX620
		Improved support for Telstra T-Box
	Languages:
		Updated Spanish translation (thanks, AlfredoRamos!)

3.6.1 - 2014-05-15

	General:
		Made resuming more intuitive
		Fixed the aspect ratio of thumbnails by default (thanks, tdcosta100!)
		Fixed the buffer going nuts after automatic subtitle conversion (thanks, tdcosta100!)
		Fixed support for URLs in playlists