@@ -41,7 +41,7 @@ DLNAMediaDatabase.4=Scanning Folder:
 DLNAMediaDatabase.5=Damaged cache can't be deleted. Stop the program and delete the folder %s manually.
 DVDISOTitle.1=Title
 FileTranscodeVirtualFolder.1=Chapter: %s
-FFmpeg.0=<html>Fontconfig is apllied to embedded and external text based subtitles.<br>For ASS/SSA subtitles the TrueType font, font size and color are applied only to the Default styling.</html>
+FFmpeg.0=<html>Fontconfig is applied to embedded and external text-based subtitles.<br>For ASS/SSA subtitles the TrueType font, font size and color are applied only to the Default styling.</html>
 FFmpegDVRMSRemux.0=Alternative FFmpeg path:
 FFmpegDVRMSRemux.1=Settings for DVR-MS remuxing
 FoldTab.0=<All Drives>
