@@ -38,12 +38,18 @@
 3.6.3 - 2014-06-??
 
 	General:
-		Added documentation for more renderer options to PS3.conf (CustomFFmpegOptions and OverrideVideoFilter)
+		Added and improved documentation for more renderer options to PS3.conf (CustomFFmpegOptions, OverrideVideoFilter and KeepAspectRatio)
+		Added support for configuring whether UMS can run just one or multiple instances
+		Made the renderer setting KeepAspectRatio more reliable
 	Renderers:
 		Added support for nPlayer, skifta and TwonkyBeam on portable Apple devices (thanks, MattDetroit!)
 		Added support for LG LM620 TVs (thanks, michal-sapsa!)
+		Improved support for DirecTV HR
 		Improved support for OPPO devices
-		Improved support for Panasonic TX-L32V10E TVs
+		Improved support for Panasonic TVs
+		Improved support for Samsung mobile devices
+	Languages:
+		Updated Spanish translation (thanks, AlfredoRamos!)
 	External Components:
 		Updated Apache commons-lang to 3.3.2, which:
 			Fixes bugs
